# rise_code

./: Cargo.toml  README.md  companion.sh
scripts/: rise_code_startup.sh
src/: events.rs  interface.rs  macros.rs  main.rs  traits.rs
src/client/: connect.rs  fetch.rs  load.rs  mod.rs  run.rs
src/commands/: awk.rs  grep.rs  mod.rs
src/init/: launcher.rs  mod.rs  responder.rs  walker.rs
src/interface/: code.rs  languages.rs
src/listener/: attach.rs  core.rs  detach.rs  mod.rs
src/loader/: client.rs  helpers.rs  macros.rs  mod.rs  parser.rs  traits.rs
